# Taiga-Tracking-Tool

./: .gitignore  Open Taiga QC Tracker.vbs  README.md  build-frontend.bat  build-portable.bat  config.example.json  start-app.bat  start-app.ps1  start-hidden.bat  start-hidden.ps1  start-local.bat
backend/: pyproject.toml  run_portable.py
backend/app/: config.py  main.py  schemas.py  taiga.py
backend/taiga_qc_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
