[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taiga-qc-tracker-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "itsdangerous>=2.2.0"
]

[tool.setuptools]
packages = ["app"]
